<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="server_ip"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <EditTextPreference
      android:capitalize="none"
      android:defaultValue="@string/pref_default_puerto"
      android:inputType="number"
      android:key="server_puerto"
      android:maxLines="1"
      android:selectAllOnFocus="true"
      android:singleLine="true"
      android:title="@string/pref_title_puerto" />

  <!--<Preference android:title="@string/pref_title_button_save"
      android:key="server_btn_save"
      android:summary="@string/pref_summary_button_save"/>
-->
</PreferenceScreen>
