<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/tvTipoTareaDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/tarea_doc_tipo"
            android:textAlignment="center"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/tvNoFactura2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/tarea_doc_nofac"
            android:textAppearance="?android:attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/tvFechaFactura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/tarea_doc_fecha"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tvEstatusFactura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/tarea_doc_estatus"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/tvFchEntrega"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/tarea_doc_fch_entrega"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/tvClienteFactura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/tarea_doc_cliente"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>
</LinearLayout>
