<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"

    >
    <!--android:background="@drawable/selector_items_list"
    android:background="@drawable/selector_items_list"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/chkSelecPar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layout_margin="5dp"
            android:button="@drawable/ic_checkbox_style"
            android:scaleType="center"
            app:layout_anchorGravity="top|end" />

        <LinearLayout
            android:id="@+id/layout_container_pardoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/tvCve_producto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/tarea_pardoc_cve"
                android:textAlignment="center"
                android:background="@color/negro_semitransparente"
                android:textColor="@color/white"
                android:textAppearance="?android:attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/tvDescr_producto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/tarea_pardoc_descr"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvLinea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/tarea_pardoc_linea"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvCantidadSalida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/tarea_pardoc_cantidad"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
                <TextView
                    android:id="@+id/tvCantidadSelect"
                    android:paddingLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tarea_pardoc_cantidadSelect"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
                <TextView
                    android:id="@+id/tvCantidadEntregada"
                    android:paddingLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tarea_pardoc_cantidadEntregada"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
