<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:src="@mipmap/ic_launcher"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:scaleType="center"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        style=""/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Fechas"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/fecha_inicial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_tfecha_ini"
            android:inputType="date"
            android:maxLines="1"
            android:singleLine="true"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/fecha_final"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_tfecha_fin"
            android:inputType="date"
            android:maxLines="1"
            android:singleLine="true"
            />
    </android.support.design.widget.TextInputLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        style=""/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Estatus"/>
    <CheckBox
        android:id="@+id/cbo_filtro_process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="En proceso"
        />
    <CheckBox
        android:id="@+id/cbo_filtro_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Terminados" />
</LinearLayout>
