<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.deinteti.gb.cricmodulemovil10.SincFragment">
    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/sinc_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_gravity="center"
        />

    <ScrollView
        android:id="@+id/sinc_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <Button
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_download"
                android:drawablePadding="8dp"
                android:id="@+id/btnSincDown"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:text="@string/sinc_frag_dow"
                android:layout_gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                />

            <Button
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_download"
                android:drawablePadding="8dp"
                android:id="@+id/btnSincVehiculos"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:text="@string/sinc_frag_dowVu"
                android:layout_gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                />

            <Button
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_clean"
                android:drawablePadding="8dp"
                android:id="@+id/btnSincClean"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:text="@string/sinc_frag_clean"
                android:layout_gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                />

            <EditText
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtFechaRpt"
                android:clickable="true"
                android:layout_gravity="center"
                android:hint="@string/sinc_frag_fchrpt"
                android:textColor="@android:color/black"
                android:background="@color/colorAccent"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:focusable="false"
                />

            <Button
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_media_play_light"
                android:drawablePadding="8dp"
                android:id="@+id/btnGenReporte"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:text="@string/sinc_frag_genrpt"
                android:layout_gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                />

        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>

    <LinearLayout
        android:id="@+id/register_server_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textMensaje_Server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

</FrameLayout>
